# claudifier

./: .gitignore  Makefile  README.md  pull_request_template.md
.claudifier/: README.txt  claudifier.toml
src/: CMakeLists.txt  configs.hpp  main.cpp  networking.cpp  networking.hpp  utils.cpp  utils.hpp
src/api/: api.cpp  api.hpp  api_keys.cpp  api_keys.hpp  create_message.cpp  curl_base.cpp  curl_base.hpp  errors.cpp  errors.hpp  models.cpp  models.hpp  networking.cpp  networking.hpp  parse_error.cpp  parse_error.hpp  parse_utils.cpp  parse_utils.hpp  query_costs_api.cpp  query_costs_api.hpp  query_messages_api.cpp  query_messages_api.hpp  query_models_api.cpp  query_models_api.hpp  responses.hpp
src/commands/: command_chat.cpp  command_chat.hpp  command_costs.cpp  command_costs.hpp  command_models.cpp  command_models.hpp  command_run.cpp  command_run.hpp  command_test.cpp  command_test.hpp  command_utils.cpp  command_utils.hpp  read_cli.cpp  read_cli.hpp  utils.cpp  utils.hpp
src/core/: configs.cpp  configs.hpp  datadir.cpp  datadir.hpp
tests/: helpers.py  test_chat.py  test_costs.py  test_internal.py  test_misc.py  test_models.py  test_run.py  test_version.py
